corrections alignement et style pointé par le prof

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -3,7 +3,7 @@ body {
     font-size: 16px;
     background-color: #fff;
     color: #2A2B2E;
-    margin: 0;
+    margin: 0 1cm;
     height: 100vh;
 }
 
@@ -49,20 +49,18 @@ button:hover, button:active {
 	background-color:#f6f6f6;
 }
 
-/*.content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100vh;
-}*/
 
-.viz-container{
+
+#viz-container{
     height: 100%;
     width: 100%;
     flex-direction: column;
     display: flex;
-    padding: 0 0;
+    margin: 0;
     align-items: center;
+}
+.p{
+    width: 100%;
 }
 
 .xy {
@@ -72,21 +70,21 @@ button:hover, button:active {
 .graph {
     width: 100%;
     height: 600px;
-    margin: 10px;
+    margin: 30px;
 }
 .storyline{
     margin: 10px;
     margin-left: auto !important;
     margin-right: auto !important;
-    width: 40% !important;
+    max-width: 100% !important;
     min-width: 200px;
-    padding-bottom: 1cm;
+    padding: 1cm 0;
 }
 
 h3 {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: justify;
+    justify-content: justify;
 }
 .viz4{
     width: 100%;
